<resources>
    <string name="app_name">What\'s My Pay</string>
    <string name="greeting">Hello Sport Clips Rock Star!</string>
    <string name="affirmation">Today is YOUR day to shine!</string>
    <string name="action_settings">Settings</string>
    <string name="stat_button">Status</string>
    <string name="Calc_button">Recalculate</string>
    <string name="Test_button">Test Button</string>
    <string name="HoursWorked">Hours Worked</string>
    //<string name="PaidBackBarPerc">Paid BB %</string>
    <string name="PaidBackBarPercHint">Enter Paid BB %</string>
    <string name="HoursWorkedHint">Enter Hours Worked</string>
    //<string name="RetailSales">Retail Sales </string>
    <string name="RetailSalesHint">Enter Retail Sales</string>
    <string name="RetailPerClient">Retail per Client (THPC)</string>
    <string name="RetailPerClientHint">Enter THPC</string>
    <string name="ServiceDlrsPerHr">Service $ per Hour</string>
    <string name="ServiceDlrsPerHrHint">Enter Service $ per Hour</string>
    <string name="CPTH">CPTH</string>
    <string name="CPTH_Hint">Enter CPTH</string>

</resources>
