<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shearlogicllc.whatsmypay.MainActivity">


    <TextView
        android:text="Paid BB %:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/PaidBackBarPerc"
        android:layout_alignBottom="@+id/PaidBackBarPerc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Serv $ per hr:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/ServiceDlrsPerHr"
        android:layout_alignBottom="@+id/ServiceDlrsPerHr"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="THPC:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/THPC"
        android:layout_alignBottom="@+id/THPC"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="CPTH:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/CPTH"
        android:layout_alignBottom="@+id/CPTH"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:id="@+id/message2"
        android:text="Your Retail commission ststus will display here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textColor="@android:color/holo_blue_bright" />

    <Button
        android:text="Are you getting Retail comission?"
        android:onClick="SalesCommissionStatusClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TextView
        android:text="Retail $$:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/RetailSales"
        android:layout_alignBottom="@+id/RetailSales"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ServiceDlrsPerHr"
        android:hint="@string/ServiceDlrsPerHrHint"
        tools:phoneNumber="false"
        style="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/black"
        android:background="@color/button_color"
        android:layout_below="@+id/THPC"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/THPC"
        android:hint="@string/RetailPerClientHint"
        style="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/black"
        android:background="@color/button_color"
        android:layout_below="@+id/PaidBackBarPerc"
        android:layout_alignLeft="@+id/ServiceDlrsPerHr"
        android:layout_alignStart="@+id/ServiceDlrsPerHr"
        android:layout_marginTop="11dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/affirmation"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@android:color/holo_blue_bright"
        android:id="@+id/affirmation_text"
        android:layout_below="@+id/greeting_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/PaidBackBarPerc"
        android:hint="@string/PaidBackBarPercHint"
        tools:phoneNumber="false"
        style="@style/TextAppearance.AppCompat.Small"
        android:textColorHighlight="@android:color/background_dark"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:textAlignment="viewStart"
        android:background="@color/button_color"
        android:textColorHint="@android:color/black"
        android:layout_below="@+id/affirmation_text"
        android:layout_alignLeft="@+id/THPC"
        android:layout_alignStart="@+id/THPC"
        android:textStyle="italic" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/CPTH"
        android:hint="@string/CPTH_Hint"
        tools:phoneNumber="false"
        style="@style/TextAppearance.AppCompat.Small"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:layout_width="wrap_content"
        android:textColorHint="@android:color/black"
        android:background="@color/button_color"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ServiceDlrsPerHr"
        android:layout_alignLeft="@+id/ServiceDlrsPerHr"
        android:layout_alignStart="@+id/ServiceDlrsPerHr"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/greeting_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:layout_marginTop="71dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp" />

    <Button
        android:text="Are you getting Sales comission?"
        android:onClick="CommissionStatusClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/message"
        android:text="Your Sales commission ststus will display here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textColorHint="@android:color/holo_blue_bright"
        android:layout_marginTop="56dp"
        android:layout_alignTop="@+id/button"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/RetailSales"
        android:hint="@string/RetailSalesHint"
        tools:phoneNumber="false"
        style="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_blue_bright"

        android:layout_marginTop="32dp"
        android:textColorHint="@android:color/black"
        android:background="@color/button_color"
        android:textStyle="italic"
        android:layout_below="@+id/message"
        android:layout_alignLeft="@+id/CPTH"
        android:layout_alignStart="@+id/CPTH" />

</RelativeLayout>
